cealdemo/tests/neg1/144.gold
Error: ('144.inc' line 4:25) Include directive reached max depth, file '144.inc'
