cealdemo/tests/neg1/144.sct
.pragma N=77
.include "144.inc"

